# rustybam

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  D3miropeats.js  Dockerfile  README.md  TOC.md  _config.yml  build.rs  index.html  release.sh  rustybam.code-workspace
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: CI.yml  formatting.yml  release.yml  rustclippy.yml  rustfmt.yaml  x86_64-apple-darwin.sh  x86_64-unknown-linux-musl.sh
.test/: asm_small.bam.bai  asm_small.bed  asm_small.paf.bgz  getfasta.bed  large.test.fa.gz.fai  large.test.fa.gz.gzi  small.bam.bai  stats.bam  stats.bam.bai  test.fa  test.fa.fai  test.sam  test_nucfreq.bam
_layouts/: default.html
assets/css/: style.scss
completions/: README.md
config/: config.yaml  table.asm.tbl
env/: environment.yml
examples/: examples.md
src/: add_rg.rs  annotate.rs  bamstats.rs  bed.rs  bed_stats.rs  cli.rs  cli.yaml  fastx.rs  getfasta.rs  lib.rs  liftover.rs  main.rs  myio.rs  nucfreq.rs  paf.rs  seq_stats.rs  suns.rs  trim_overlap.rs
test/: asm_small.bam.bai  asm_small.paf  small.bam  test_nucfreq.bam.bai  trim_asm_small.bed
webstie/: data.tsv  main.html  miropeats.js
workflow/: Snakefile  reference_alignment.smk
workflow/envs/: environment.yml
workflow/scripts/: chm13.karyo.RData  contig_end_density.R  contig_end_density_utilities.R  ends_from_paf.py  ideogram.2.R  ideogram.R  lpagenotype.R  plotutils.R
