[package]
authors = ["Mitchell R. Vollger <mrvollger@gmail.com>"] 
build = "build.rs" # not yet stable enough
categories = ["command-line-utilities"] 
description = "bioinformatic tools in rust" 
edition = "2018" 
homepage = "https://mrvollger.github.io/rustybam/" 
keywords = ["cli", "bam", "paf", "liftover"] 
license = "MIT" 
name = "rustybam" 
readme = "README.md" 
repository = "https://github.com/mrvollger/rustybam" 
version = "0.1.23" 

[[bin]]
name = "rb"
path = "src/main.rs"

[[bin]]
name = "rustybam"
path = "src/main.rs"

[features]
default = ["deflate_zlib_ng", "libdeflate"]
deflate_rust = ["gzp/deflate_rust", "flate2/rust_backend"]
deflate_zlib = ["gzp/deflate_zlib", "flate2/zlib", "any_zlib"]
deflate_zlib_ng = ["gzp/deflate_zlib_ng", "flate2/zlib-ng-compat", "any_zlib"]
libdeflate = ["gzp/libdeflate"]

any_zlib = [] # internal feature flag

[dependencies]
anyhow = "1.0.44"
bimap = "0.6.1"
bio = "0.34.0"
bio-types = "0.12.0"
calm_io = "0.1.1"
chrono = "0.4.19"
clap = {version = "3.0.0-rc.4", features = ["yaml", "derive"]}
colored = "2.0.0"
env_logger = "0.9.0"
flate2 = {version = "~1", default-features = false}
gzp = {version = "0.8.2", default-features = false}
itertools = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.14"
natord = "1.0.9"
rayon = "1.5"
regex = "1.5.4"
rust-htslib = "0.38.2"

[build-dependencies]
clap = {version = "3.0.0-rc.4", features = ["yaml", "derive"]}
clap_generate = "3.0.0-rc.4"
env_logger = "0.9.0"
log = "0.4.14"
