[package]
authors = ["Mitchell R. Vollger <mrvollger@gmail.com>"]
build = "build.rs" # not yet stable enough
categories = ["command-line-utilities"]
description = "bioinformatics toolkit in rust"
edition = "2021"
homepage = "https://mrvollger.github.io/rustybam/"
keywords = ["cli", "bam", "paf", "liftover"]
license = "MIT"
name = "rustybam"
readme = "README.md"
repository = "https://github.com/mrvollger/rustybam"
version = "0.1.32"

[[bin]]
name = "rb"
path = "src/main.rs"

[[bin]]
name = "rustybam"
path = "src/main.rs"

[features]
default = ["deflate_zlib_ng", "snap_default", "libdeflate"]

deflate_rust = ["gzp/deflate_rust", "flate2/rust_backend"]
deflate_zlib = ["gzp/deflate_zlib", "flate2/zlib", "any_zlib"]
deflate_zlib_ng = ["gzp/deflate_zlib_ng", "flate2/zlib-ng-compat", "any_zlib"]
libdeflate = ["gzp/libdeflate"]
snap_default = ["gzp/snappy_default", "snap", "snappy"]

any_zlib = [] # internal feature flag
snappy = [] # internal feature flag

[dependencies]
anyhow = "1.0.71"
bimap = "0.6.3"
bio = "1.3"
bio-types = "1.0"
calm_io = "0.1.1"
chrono = "0.4.26"
clap = {version = "3.2.22", features = ["derive"]}
colored = "2.0.0"
env_logger = "0.9.0"
flate2 = {version = "~1", default-features = false}
gzp = {version = "0.11", default-features = false}
itertools = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.19"
natord = "1.0.9"
needletail = "0.5.1"
rayon = "1.7"
regex = "1.8"
rust-htslib = "0.44"
snap = {version = "1.1", optional = true}

[build-dependencies]
clap = {version = "3.2.22", features = ["derive"]}
clap_complete = "3.2.5"
env_logger = "0.9.0"
log = "0.4.19"
